[gd_scene load_steps=2 format=3 uid="uid://djrvl8pvkr7aa"]

[ext_resource type="Script" path="res://src/screens/settings/language_picker/language_picker.gd" id="1_1ma02"]

[node name="LanguagePicker" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.024
offset_bottom = 0.0799999
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_1ma02")

[node name="English" type="Button" parent="."]
layout_mode = 2
text = "ENGLISH"

[node name="Portuguese" type="Button" parent="."]
visible = false
layout_mode = 2
text = "PORTUGUES"

[node name="Italian" type="Button" parent="."]
layout_mode = 2
text = "ITALIANO"

[node name="Spanish" type="Button" parent="."]
visible = false
layout_mode = 2
text = "ESPAÃ‘OL"

[node name="German" type="Button" parent="."]
layout_mode = 2
text = "DEUTSCH"

[connection signal="pressed" from="English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="Portuguese" to="." method="_on_portuguese_pressed"]
[connection signal="pressed" from="Italian" to="." method="_on_italian_pressed"]
[connection signal="pressed" from="Spanish" to="." method="_on_spanish_pressed"]
[connection signal="pressed" from="German" to="." method="_on_german_pressed"]
